--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="dist/css/main.css">
+    <link rel="stylesheet" href="main/dist/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>StarBucks</title>
 </head>
@@ -11,7 +11,7 @@
     <header>
         <nav class="nav">
             <div class="nav__links">
-                <img src="dist/image/starbucks-seeklogo.png" alt="">
+                <img src="main/dist/image/starbucks-seeklogo.png" alt="">
                 <ul class="nav__links__items">
                     <li class="nav__links__item">
                         <a href="" class="nav__links__link">Menu</a>
@@ -48,7 +48,7 @@
 
         <div class="md-flex">
             <div class="md-flex__left">
-                <img src="dist/image/starbucks-1.jpg" alt="">
+                <img src="main/dist/image/starbucks-1.jpg" alt="">
             </div>
             <div class="md-flex__right">
                 <div class="md-flex__right__text">
@@ -62,7 +62,7 @@
         </div>
     <section class="section">
         <div class="section__left">
-            <img src="dist/image/model-1.jpg" alt="">
+            <img src="main/dist/image/model-1.jpg" alt="">
         </div>
     <div class="section__right">
         <div class="section__right__text">
@@ -77,7 +77,7 @@
 
     <section class="join-section">
         <div class="join-section__left">
-            <img src="dist/image/model-2.jpg" alt="">
+            <img src="main/dist/image/model-2.jpg" alt="">
         </div>
     <div class="join-section__right">
         <div class="join-section__right__text">
@@ -93,7 +93,7 @@
 
     <section class="learn-section">
         <div class="learn-section__left">
-            <img src="dist/image/model-3.jpg" alt="">
+            <img src="main/dist/image/model-3.jpg" alt="">
         </div>
     <div class="learn-section__right">
         <div class="learn-section__right__text">
@@ -109,7 +109,7 @@
 
     <section class="coffe-section">
         <div class="coffe-section__left">
-            <img src="dist/image/model-4.jpg" alt="">
+            <img src="main/dist/image/model-4.jpg" alt="">
         </div>
     <div class="coffe-section__right">
         <div class="coffe-section__right__text">
